<resources>
    <string name="app_name">AppointmentTrack</string>
    <string name="action_settings">Settings</string>
    <string name="no_upcoming_appointments">No upcoming appointments!</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="done">done</string>
    <string name="required">*Required</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_reminder">Remind me</string>
    <string name="send_sms_or_email_reminder_to_client">Send reminder to client</string>
    <string name="email">Email</string>
    <string name="delete_all_appointments">Delete all appointments</string>
    <string name="added_on">added on</string>
    <string name="save">Save</string>
    <string name="_30">30</string>
    <string name="dummyTime">10:00</string>
    <string name="dummyDate">Aug 12, 2019</string>
    <string name="dummyDesc">No description added</string>
    <string name="dummyEmail">Email not available</string>
    <string name="dummyPhone">Phone not available</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="no_scheduled_appointments">No scheduled appointments!</string>
    <string name="all_appointments">All Appointments</string>
    <string name="home">Home</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="set_client_reminder_message">Set client reminder message</string>
    <string name="text_message">Text Message</string>
    <string name="general">General</string>
    <string name="google_calendar_sync">Sync with Google calendar</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification">Notification</string>
    <string name="calendar">Calendar</string>
</resources>
