<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/primaryGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_calender_black_24dp"
            android:title="@string/all_appointments" />

        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/reminders" />

    </group>

    <group android:id="@+id/secondaryGroup">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about" />

    </group>

</menu>