<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--General settings-->
    <PreferenceCategory app:title="@string/general">

        <ListPreference
            app:defaultValue="24hour"
            android:entries="@array/time_format_entries"
            android:entryValues="@array/time_format_values"
            app:key="time_format"
            app:title="Time format"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--Calendar settings-->
    <PreferenceCategory app:title="@string/calendar">

        <SwitchPreferenceCompat
            app:key="add_to_calendar"
            app:title="@string/google_calendar_sync" />

    </PreferenceCategory>

    <!--Notification settings-->
    <PreferenceCategory app:title="@string/notification">

        <SwitchPreferenceCompat
            app:key="notification_sound"
            app:title="@string/notification_sound"/>

        <SwitchPreferenceCompat
            app:key="notification_dot"
            app:title="Allow notification dots"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
